--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "full-deploy": "npm run build && git add -A && git commit -m \"build\" && git push && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
